--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@workspace/eslint-config": "workspace:*",
     "@workspace/typescript-config": "workspace:*",
     "prettier": "3.6.1",
+    "tsx": "^4.20.6",
     "turbo": "2.5.4",
     "typescript": "^5.8.3"
   }
