--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
     "usehooks-ts": "^3.1.1",
+    "workflow": "4.0.1-beta.7",
     "zod": "^3.25.69"
   },
   "devDependencies": {
