--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -27,6 +27,7 @@ GITHUB_APP_ID=
 GITHUB_APP_CLIENT_ID=
 GITHUB_APP_CLIENT_SECRET=
 GITHUB_APP_PRIVATE_KEY=
+GITHUB_APP_WEBHOOK_SECRET=
 
 OPENAI_API_KEY=
 E2B_API_KEY=
