--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,7 @@
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.844.0",
+    "@octokit/openapi-webhooks-types": "^12.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
