--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.23",
     "@anthropic-ai/sdk": "^0.56.0",
+    "@e2b/code-interpreter": "^2.2.0",
     "@octokit/auth-app": "^8.0.2",
     "@octokit/openapi-types": "^25.1.0",
     "@octokit/rest": "^22.0.0",
