--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,9 @@
     "db:dev:drop": "tsx ./src/db/delete-tables.dev.ts",
     "db:dev:reset": "npm run db:dev:drop && npm run db:dev:push && npm run db:dev:seed",
     "db:dev:seed": "tsx ./src/db/seed.dev.ts",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio",
+    "db:dbml": "tsx ./src/db/dbml.ts"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
@@ -66,6 +68,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:^",
+    "drizzle-dbml-generator": "^0.10.0",
     "eslint": "^9.20.1",
     "import-in-the-middle": "^1.14.2",
     "require-in-the-middle": "^7.5.2",
