updates to the agent

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -30,6 +30,7 @@ GITHUB_APP_PRIVATE_KEY=
 GITHUB_APP_WEBHOOK_SECRET=
 
 OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
 E2B_API_KEY=
 
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
