--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,7 @@
     "GITHUB_APP_PRIVATE_KEY",
     "GITHUB_APP_WEBHOOK_SECRET",
     "OPENAI_API_KEY",
+    "ANTHROPIC_API_KEY",
     "E2B_API_KEY",
     "MOCK_AI",
     "DATABASE_URL",
