--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
+    "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -40,13 +40,13 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
     "postgres": "^3.4.7",
     "posthog-js": "^1.260.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
@@ -57,15 +57,16 @@
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
     "usehooks-ts": "^3.1.1",
-    "workflow": "4.0.1-beta.7",
-    "zod": "^3.25.69"
+    "workflow": "4.0.1-beta.26",
+    "zod": "^3.25.69",
+    "zod-to-json-schema": "^3.25.0"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.844.0",
     "@octokit/openapi-webhooks-types": "^12.0.3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:^",
@@ -74,5 +75,11 @@
     "import-in-the-middle": "^1.14.2",
     "require-in-the-middle": "^7.5.2",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
