--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,8 +58,7 @@
     "swr": "^2.3.4",
     "usehooks-ts": "^3.1.1",
     "workflow": "4.0.1-beta.26",
-    "zod": "^3.25.69",
-    "zod-to-json-schema": "^3.25.0"
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.844.0",
