--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,15 @@
     "@ai-sdk/openai": "^1.3.23",
     "@anthropic-ai/sdk": "^0.56.0",
     "@e2b/code-interpreter": "^2.2.0",
+    "@lexical/code": "^0.39.0",
+    "@lexical/extension": "^0.39.0",
+    "@lexical/link": "^0.39.0",
+    "@lexical/list": "^0.39.0",
+    "@lexical/markdown": "^0.39.0",
+    "@lexical/react": "^0.39.0",
+    "@lexical/rich-text": "^0.39.0",
+    "@lexical/selection": "^0.39.0",
+    "@lexical/utils": "^0.39.0",
     "@octokit/auth-app": "^8.0.2",
     "@octokit/openapi-types": "^25.1.0",
     "@octokit/rest": "^22.0.0",
@@ -39,6 +48,7 @@
     "dotenv": "^17.2.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
+    "lexical": "^0.39.0",
     "lucide-react": "^0.525.0",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
