--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,9 +23,9 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/openai": "^1.3.23",
+    "@ai-sdk/openai": "^1.3.24",
     "@anthropic-ai/sdk": "^0.56.0",
-    "@e2b/code-interpreter": "^2.2.0",
+    "@e2b/code-interpreter": "^2.3.3",
     "@lexical/code": "^0.39.0",
     "@lexical/extension": "^0.39.0",
     "@lexical/link": "^0.39.0",
@@ -35,54 +35,54 @@
     "@lexical/rich-text": "^0.39.0",
     "@lexical/selection": "^0.39.0",
     "@lexical/utils": "^0.39.0",
-    "@octokit/auth-app": "^8.0.2",
+    "@octokit/auth-app": "^8.1.2",
     "@octokit/openapi-types": "^25.1.0",
-    "@octokit/rest": "^22.0.0",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@t3-oss/env-nextjs": "^0.13.8",
+    "@octokit/rest": "^22.0.1",
+    "@paralleldrive/cuid2": "^2.3.1",
+    "@t3-oss/env-nextjs": "^0.13.10",
     "@workspace/ui": "workspace:^",
-    "ai": "^4.3.17",
-    "better-auth": "^1.3.34",
+    "ai": "^4.3.19",
+    "better-auth": "^1.4.7",
     "date-fns": "^4.1.0",
     "diff": "^8.0.2",
-    "dotenv": "^17.2.0",
-    "drizzle-kit": "^0.31.4",
-    "drizzle-orm": "^0.44.2",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.8",
+    "drizzle-orm": "^0.44.7",
     "lexical": "^0.39.0",
     "lucide-react": "^0.525.0",
-    "next": "16.0.7",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
-    "octokit": "^5.0.3",
+    "octokit": "^5.0.5",
     "postgres": "^3.4.7",
-    "posthog-js": "^1.260.1",
+    "posthog-js": "^1.309.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-hook-form": "^7.60.0",
+    "react-hook-form": "^7.68.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.6.6",
     "recharts": "2.15.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.6",
-    "swr": "^2.3.4",
+    "sonner": "^2.0.7",
+    "swr": "^2.3.8",
     "usehooks-ts": "^3.1.1",
     "workflow": "4.0.1-beta.33",
-    "zod": "^4.1.13"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
-    "@aws-sdk/client-s3": "^3.844.0",
-    "@octokit/openapi-webhooks-types": "^12.0.3",
-    "@types/node": "^20",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3",
+    "@aws-sdk/client-s3": "^3.955.0",
+    "@octokit/openapi-webhooks-types": "^12.1.0",
+    "@types/node": "^20.19.27",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:^",
     "drizzle-dbml-generator": "^0.10.0",
-    "eslint": "^9.20.1",
-    "import-in-the-middle": "^1.14.2",
+    "eslint": "^9.39.2",
+    "import-in-the-middle": "^1.15.0",
     "require-in-the-middle": "^7.5.2",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
