--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -16,8 +16,8 @@
     "nextra": "^4.6.1",
     "nextra-theme-docs": "^4.6.1",
     "posthog-js": "^1.309.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "three": "^0.178.0",
     "three-stdlib": "^2.36.1"
   },
