--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -55,8 +55,8 @@
     "octokit": "^5.0.5",
     "postgres": "^3.4.7",
     "posthog-js": "^1.309.1",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.6",
